<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/news" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_blank"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/blank" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/tools" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_menu_news"
            android:title="@string/account" />

    </group>
</menu>